Fixed spacing errors and unclosed elements. starting styling css

--- a/css/main.css
+++ b/css/main.css
@@ -4,22 +4,31 @@
 @-webkit-viewport { width: device-width; scale: 1; }
 @viewport { width: device-width; scale: 1; }
 
-
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
 html {
--moz-text-size-adjust: 100%;
--ms-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%;
-text-size-adjust: 100%;
-box-sizing: border-box;
-font: normal 100%/1.5 sans-serif;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  box-sizing: border-box;
+  font: normal 100%/1.5 sans-serif;
+  line-height: 1.3;
 }
 
 .card-img {
   width: 50px;
   display: block;
   margin: auto;
+}
+
+h2 {
+  font-weight: normal;
+  margin-bottom: 0;
+}
+
+.card-body {
+  margin-top: 0;
 }
